--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-Graduate of computer science Looking for a role where I can grow and learn from
+Graduate of computer science intrested in web development Looking for a role where I can grow and learn from
 experienced team members while using the skills that I improved to help them.</p>
         </div>
 
