--- a/about.html
+++ b/about.html
@@ -81,8 +81,7 @@
         <div class="section-title">
           <h2 id="aboutme">About</h2>
           <p id="summary">
-Graduate of computer science intrested in web development, Looking for a role where I can grow and learn from
-experienced team members while using the skills that I improved to help them.</p>
+Graduate of computer science interested in web development, I have experience with html, css, java, javascript, sql, and php languages. also i have little experience in c# and swift languages, Looking for a role where I can grow and learn from experienced team members while using the skills that I improved to help them.</p>
         </div>
 
         <div class="row">
