--- a/Certificates.html
+++ b/Certificates.html
@@ -320,7 +320,7 @@
                 <h4 id="c19">IC3</h4>
                 
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/IC3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Information Security"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/IC3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="IC3"><i class="bx bx-plus"></i></a>
                   
                 </div>
               </div>
