--- a/Certificates.html
+++ b/Certificates.html
@@ -317,10 +317,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/IC3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4 id="c19">IC3</h4>
+                <h4 id="c19">IC3 Digital Literacy Certification</h4>
                 
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/IC3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="IC3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/IC3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="IC3 Digital Literacy Certification"><i class="bx bx-plus"></i></a>
                   
                 </div>
               </div>
