--- a/resume.html
+++ b/resume.html
@@ -88,8 +88,7 @@
             <h3 id="summa" class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4 id="myname">Mohammed Binshihon</h4>
-              <p><em id="sumary">Graduate of computer science intrested in web development, I have exprince with html, css, java,javascript, sql, and php langues. also i have little expirince in c# and swift languges, Looking for a role where I can grow and learn from experienced team members while using the skills that I improved to help them.</em></p>
-              <p>
+              <p><em id="sumary">Graduate of computer science interested in web development, I have experience with html, CSS, java, JavaScript, sql, and php languages. also i have little experience in c# and swift languages, Looking for a role where I can grow and learn from experienced team members while using the skills that I improved to help them.<p>
               <ul>
                 
                 <li>0557788838</li>
