--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+<!-- VISA Tracking Code for https://www.mohammed-cv.ga/ --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','4d78f34c-4327-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for https://www.mohammed-cv.ga/ -->
 </body>
 
 </html>
